--- a/QuanLyNhanVien/index.html
+++ b/QuanLyNhanVien/index.html
@@ -148,9 +148,7 @@
 									<th><em class="fa fa-cog"></em></th>
 								</tr>
 							</thead>
-							<tbody id="tableDanhSach">
-
-							</tbody>
+							<tbody id="tbodyNV"></tbody>
 						</table>
 					</div>
 
@@ -215,7 +213,7 @@
 						<div class="form-group">
 							<div class="input-group">
 								<div class="input-group-prepend">
-									<span class="input-group-text"><i class="fa fa-envelope"></i></span>
+									<span class="input-group-text" id="spanEmailNV"><i class="fa fa-envelope"></i></span>
 								</div>
 								<input type="email" name="email" id="email" class="form-control input-sm"
 									placeholder="Email">
@@ -240,7 +238,7 @@
 								<div class="input-group-prepend">
 									<span class="input-group-text"><i class="fa fa-calendar"></i></span>
 								</div>
-								<input type="text" name="ngaylam" id="datepicker" class="form-control"
+								<input type="text" name="ngaylam" id="datePicker" class="form-control"
 									placeholder="Ngày làm">
 							</div>
 
